fixed wrap on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -434,7 +434,7 @@ z-index: 100;
     }
     .wrap{
         max-height: 76rem;
-        min-height: 66rem;
+        min-height: 59rem;
     }
     #headshot-wrap{
         position: relative;
@@ -735,6 +735,10 @@ z-index: 100;
         display: none;
     }
     
+    #skills-bio{
+        margin-top: -3rem;
+
+    }
    
     
     
